creo que ya esta

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -70,6 +70,10 @@
 
             <a class="admin-link" href="/pagos">Pagos</a>
         </div>
+
+        <div style="margin-bottom: 20px;">
+            <a href="/register" class="btn-admin-register">Registrar nuevo administrador</a>
+        </div>
     </main>
     <script>
     function filtrarContactos() {
