--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -40,7 +40,7 @@
                     <li><a class="button" href="/#testimonials">Testimonios</a></li>
                     <li><a class="button" href="/#contact">Contacto</a></li>
                     <li>
-                        <% if (typeof isAdmin !== 'undefined' && isAdmin) { %>
+                        <% if (typeof isLoggedIn !== 'undefined' && isLoggedIn) { %>
                             <a class="button" href="/logout">Cerrar sesion</a>
                         <% } else { %>
                             <a class="button" href="/login">
@@ -48,7 +48,7 @@
                             </a>
                         <% } %>
                     </li>
-                    <% if (typeof isAdmin !== 'undefined' && isAdmin) { %>
+                    <% if (typeof isLoggedIn !== 'undefined' && isLoggedIn) { %>
                         <li>
                             <a href="/admin" class="button">
                                 <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="http://www.w3.org/2000/svg"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-address-book"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M20 6v12a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2z" /><path d="M10 16h6" /><path d="M13 11m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M4 8h3" /><path d="M4 12h3" /><path d="M4 16h3" /></svg>
